@@ -1,14 +1,13 @@
 from pyramid.config import Configurator
 import pyramid_beaker
-import pyramid_handlers
 import pyramid_sqla
-from pyramid_sqla.static import add_static_route
 
 def main(global_config, **settings):
     """ This function returns a Pyramid WSGI application.
     """
     config = Configurator(settings=settings)
-    config.include(pyramid_handlers.includeme)
+    config.include('pyramid_handlers')
+    config.include('pyramid_sqla')
 
     # Initialize database
     pyramid_sqla.add_engine(settings, prefix='sqlalchemy.')
@@ -27,6 +26,6 @@ def main(global_config, **settings):
                        action='index')
     config.add_handler('main', '/{action}', '{{package}}.handlers:MainHandler',
         path_info=r'/(?!favicon\.ico|robots\.txt|w3c)')
-    add_static_route(config, '{{package}}', 'static', cache_max_age=3600)
+    config.add_static_route('{{package}}', 'static', cache_max_age=3600)
 
     return config.make_wsgi_app()
